Techium project added

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -23,6 +23,12 @@
 			"title": "Airbnb Clone",
 			"description": "A serios Airbnb Clone",
 			"url": "https://github.com/santiagobedoa/holbertonschool-AirBnB_clone_v3"
-		}
+		},
+    {
+      "name": "techium",
+      "title": "Techium Webpage",
+      "description": "Responsive homepage",
+      "url": "https://github.com/santiagobedoa/techium"
+    }
 	]
 }
