blog post app project updated

--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -7,10 +7,10 @@
 			"url": "https://github.com/santiagobedoa/shell"
 		},
 		{
-			"name": "lamaBlog",
+			"name": "blogApp",
 			"title": "Blog Post App",
 			"description": "Completely functional Blog Post App",
-			"url": "https://github.com/santiagobedoa/blog_post_app"
+			"url": "https://github.com/santiagobedoa/tutorial-blog_post_app"
 		},
 		{
 			"name": "portafolio",
